Add note on testing LEAF model and endorse the original idea. Based on pull #tjake/Jlama/pull/194(cc T-Lind)